samples/_failures_safe/1761191280_2f0cdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35e94919.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_35e94919.c:146:9: error: expected expression at end of input
  146 |         case STATE_READING: return
      |         ^~~~
./samples/SAFE/__tmp_35e94919.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_35e94919.c:146:9: error: expected declaration or statement at end of input
